style: spinner alignment fix

--- a/src/components/Item/Item.module.css
+++ b/src/components/Item/Item.module.css
@@ -52,3 +52,8 @@
   }
 }
 
+.spinner {
+  display: flex;
+  align-self: center;
+  margin-left: 7px;
+}
